A: 更新至JVM 调优思路